Fixed right spacing of desktop+ main nav

--- a/css/less/navbar-dgbrt.less
+++ b/css/less/navbar-dgbrt.less
@@ -287,7 +287,7 @@
     }
 
     &.navbar-right:last-child {
-      margin-right: @navbar-padding-horizontal;
+      // margin-right: @navbar-padding-horizontal;
     }
   }
 }
